--- a/cleaning_hiv.ipynb
+++ b/cleaning_hiv.ipynb
@@ -263,28 +263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "fd7c5643-9d5f-4006-8023-35f68f4731e0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_90036/1638565219.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  cities.loc[:,\"state\"] = cities[\"code\"].astype(\"str\").str.slice(0, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "cities = pd.read_csv(\"data/cases_cleaned.csv\").query(\"region_type == 'city' \")\n",
+    "\n",
     "ibge = pd.read_excel(\"data/regioes_ibge.xls\")\n",
     "ibge[\"state\"] = ibge[\"CD_GEOCODI\"].astype(\"str\").str.slice(0, 2)\n",
     "\n",
-    "cities = cases.query(\"region_type == 'city' \")\n",
     "cities.loc[:,\"state\"] = cities[\"code\"].astype(\"str\").str.slice(0, 2)\n",
     "\n",
     "ibge = ibge[[\"nome_mun\", \"state\", \"nome_rgi\", \"cod_rgi\"]]\n",
@@ -298,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "69a13141-6daa-47ab-a79c-0d9e783c9064",
    "metadata": {},
    "outputs": [],
@@ -322,6 +311,14 @@
     "              \"population\":\"sum\"\n",
     "             })\n",
     "        .reset_index())\n",
+    "\n",
+    "regions.loc[regions[\"hiv_homo\"] == 0, \"pct_new_users\"] = 0\n",
+    "regions.loc[regions[\"hiv_homo\"] != 0, \"pct_new_users\"] = regions[\"new_users\"]/regions[\"hiv_homo\"]\n",
+    "regions.loc[regions[\"new_users\"] < 0, \"pct_new_users\"] = 0\n",
+    "\n",
+    "regions.loc[regions[\"hiv_homo\"] == 0, \"pct_following\"] = 0\n",
+    "regions.loc[regions[\"hiv_homo\"] != 0, \"pct_following\"] = regions[\"following\"]/regions[\"hiv_homo\"]\n",
+    "\n",
     "regions.to_csv(\"data/regions.csv\", mode=\"w\", index=False)"
    ]
   }
