--- a/cleaning_hiv.ipynb
+++ b/cleaning_hiv.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "78f680b2-14c3-437e-b4af-febaa8059ee5",
    "metadata": {},
    "outputs": [],
@@ -37,10 +37,10 @@
     "cols_hiv_mf = {\n",
     "    \"Casos\":\"hiv_total\",\n",
     "    \"Casos M\":\"hiv_m\",\n",
-    "    \"Casos F\":\"hiv_f\",\n",
-    "    \"Tx Det\":\"hiv_dr_total\",\n",
-    "    \"Tx Det M\":\"hiv_drm\",\n",
-    "    \"Tx Det F\":\"hiv_drf\"\n",
+    "    \"Casos F\":\"hiv_f\"#,\n",
+    "    #\"Tx Det\":\"hiv_dr_total\",\n",
+    "    #\"Tx Det M\":\"hiv_drm\",\n",
+    "    #\"Tx Det F\":\"hiv_drf\"\n",
     "}\n",
     "\n",
     "cases = pd.DataFrame()\n",
@@ -48,7 +48,7 @@
     "for col_port, col_eng in common_cols.items():\n",
     "    cases.loc[:,col_eng] = indicadores[col_port]\n",
     "\n",
-    "years_hiv = range(2013,2022)\n",
+    "years_hiv = range(2013,2023)\n",
     "for year in years_hiv:\n",
     "    cases[year] = 0\n",
     "# create panel\n",
@@ -58,7 +58,7 @@
     "          .drop(\"value\",axis=1))\n",
     "\n",
     "sexuality_codes = {\n",
-    "    \"Casos Categ. Exp. Hierarq. 10\":\"hiv_homo\",\n",
+    "    \"Casos Categ. Exp. Hierarq. 10\":\"hiv_h\",\n",
     "    \"Casos Categ. Exp. Hierarq. 20\":\"hiv_bi\",\n",
     "    \"Casos Categ. Exp. Hierarq. 30\":\"hiv_het\"\n",
     "}\n",
@@ -89,7 +89,6 @@
     "                .rename(columns={\"new_col\":group}))\n",
     "    return final_df\n",
     "\n",
-    "\n",
     "indicadores_2 = pd.read_csv(f\"{path}/indicadores_cont_2.csv\")\n",
     "\n",
     "cases = add_rows(cases, indicadores, cols_hiv_mf, years_hiv)\n",
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "75d1762b-e719-46ea-9671-ad73800afd31",
    "metadata": {},
    "outputs": [],
@@ -145,24 +144,37 @@
     "\n",
     "years_hep = range(2013, 2021)#13-20\n",
     "\n",
-    "cases = add_rows(cases, hep_dados, hep_AB_cols, years_hep, complete=[2021])\n",
-    "cases = add_rows(cases, hep_dados_cont, hep_C_cols, years_hep, complete=[2021])"
+    "cases = add_rows(cases, hep_dados, hep_AB_cols, years_hep, complete=[2021,2022])\n",
+    "cases = add_rows(cases, hep_dados_cont, hep_C_cols, years_hep, complete=[2021,2022])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19d781ec-8af9-4bb2-87a0-1a3202867820",
+   "id": "854caa3a-600f-42d2-85a7-d438099293a9",
    "metadata": {},
    "source": [
-    "#### cleaning"
+    "#### add prep data, controls and region info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "fd3b2f1f-174d-4d70-9c42-0a064f63c6b4",
+   "execution_count": 8,
+   "id": "f68d7650-24db-4a26-a1a1-1383f373e7b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_19728/2675067475.py:48: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  cities[\"state_code\"] = cities[\"code\"].astype(str).str.slice(0,2)\n"
+     ]
+    }
+   ],
    "source": [
     "cases = cases.set_index(\"code\")\n",
     "cases.loc[:, \"region_type\"] = \"city\"\n",
@@ -171,32 +183,7 @@
     "cases.loc[55, \"region_type\"] = \"brazil\"\n",
     "cases = cases.reset_index()\n",
     "\n",
-    "#### detection rate to numeric\n",
-    "\n",
-    "cases.loc[cases[\"hiv_dr_total\"]== '#DIV/0!', \"hiv_dr_total\"] = \"0\"\n",
-    "cases.loc[cases[\"hiv_drf\"]== '#DIV/0!', \"hiv_drf\"] = \"0\"\n",
-    "\n",
-    "cases[\"hiv_dr_total\"] = cases[\"hiv_dr_total\"].str.replace(\",\",\".\").astype(float)\n",
-    "cases[\"hiv_drf\"] = cases[\"hiv_drf\"].str.replace(\",\",\".\").astype(float)\n",
-    "cases[\"hiv_drm\"] = cases[\"hiv_drm\"].str.replace(\",\",\".\").astype(float)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "854caa3a-600f-42d2-85a7-d438099293a9",
-   "metadata": {},
-   "source": [
-    "#### add prep data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "f68d7650-24db-4a26-a1a1-1383f373e7b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# percent treat pra todo mundo\n",
+    "# add percent treat\n",
     "\n",
     "import pandas as pd\n",
     "prep = pd.DataFrame()\n",
@@ -220,56 +207,61 @@
     "cases = cases.merge(prep_data, left_on=[\"code\",\"year\"],\n",
     "                right_on=[\"city_code\",\"year\"],\n",
     "                how=\"left\")\n",
-    "cases.loc[cases[\"hiv_homo\"] == 0, \"pct_new_users\"] = 0\n",
-    "cases.loc[cases[\"hiv_homo\"] != 0, \"pct_new_users\"] = cases[\"new_users\"]/cases[\"hiv_homo\"]\n",
+    "cases.loc[cases[\"hiv_h\"] == 0, \"pct_new_users\"] = 0\n",
+    "cases.loc[cases[\"hiv_h\"] != 0, \"pct_new_users\"] = cases[\"new_users\"]/cases[\"hiv_h\"]\n",
     "cases.loc[cases[\"new_users\"] < 0, \"pct_new_users\"] = 0\n",
     "\n",
-    "cases.loc[cases[\"hiv_homo\"] == 0, \"pct_following\"] = 0\n",
-    "cases.loc[cases[\"hiv_homo\"] != 0, \"pct_following\"] = cases[\"following\"]/cases[\"hiv_homo\"]\n",
+    "cases.loc[cases[\"hiv_h\"] == 0, \"pct_following\"] = 0\n",
+    "cases.loc[cases[\"hiv_h\"] != 0, \"pct_following\"] = cases[\"following\"]/cases[\"hiv_h\"]\n",
     "\n",
     "cases = cases.query(\"code != 0\")\n",
     "\n",
     "cases = cases.merge(population,\n",
     "            left_on=[\"code\",\"name\"],\n",
     "            right_on=[\"code\",\"name\"],\n",
-    "            how=\"left\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d5c36c68-bdc7-4d6d-bba8-fcb5cee26028",
-   "metadata": {},
-   "source": [
-    "### to csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "227f5eec-3ed0-42b3-a928-9c4f7c4b5d6c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cases.to_csv(\"data/cases_cleaned.csv\", mode=\"w\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "388b2689-1336-4177-a2e7-6dbd905e27da",
-   "metadata": {},
-   "source": [
-    "#### ibge"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "fd7c5643-9d5f-4006-8023-35f68f4731e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "cities = pd.read_csv(\"data/cases_cleaned.csv\").query(\"region_type == 'city' \")\n",
+    "            how=\"left\")\n",
+    "\n",
+    "## CONTROLS\n",
+    "cities = cases.query(\"region_type == 'city'\")\n",
+    "cities[\"state_code\"] = cities[\"code\"].astype(str).str.slice(0,2)\n",
+    "\n",
+    "## ieps = institute for health policy studies\n",
+    "ieps = pd.read_csv(\"data/ieps.csv\")\n",
+    "rename_ieps = {\n",
+    "    \"codmun\":\"code\",\n",
+    "    \"ano\":\"year\",\n",
+    "    \"desp_tot_saude_pc_mun\":\"health_expend\",\n",
+    "    \"gasto_pbf_pc_def\":\"cash_transfer_expend\",\n",
+    "    \"pib_cte_pc\":\"gdpp\",\n",
+    "    \"pct_pop20a24\":\"pop20_24\"\n",
+    "}\n",
+    "ieps = ieps.rename(columns=rename_ieps)\n",
+    "ieps = ieps.replace(' ',pd.NA)\n",
+    "ieps = ieps[[\"code\",\"year\",\"health_expend\",\n",
+    "             \"cash_transfer_expend\",\"gdpp\",\"pop20_24\"]]\n",
+    "\n",
+    "numeric_cols = [\"health_expend\",\"cash_transfer_expend\",\n",
+    "                \"gdpp\",\"pop20_24\"]\n",
+    "for c in numeric_cols:\n",
+    "    ieps.loc[ieps[c].notna(),c] = ieps.loc[ieps[c].notna(),c].str.replace(\",\",\".\").astype(float).round(2)\n",
+    "\n",
+    "cities = cities.merge(ieps, on=[\"code\",\"year\"], how=\"left\")\n",
+    "\n",
+    "## COVID DATA\n",
+    "covid = pd.read_csv(\"data/covid.csv\")\n",
+    "covid = covid.query(\"place_type == 'city'\")\n",
+    "covid[\"date\"] = pd.to_datetime(covid[\"date\"])\n",
+    "covid = covid.rename(columns={\"date\":\"year\"})\n",
+    "covid = covid.sort_values([\"state\",\"city\",\"year\"])\n",
+    "covid = covid.set_index([\"state\",\"city\"])\n",
+    "covid_cases = (covid.groupby([\"state\", \"city\",covid[\"year\"].dt.year])\n",
+    "                 .agg({\"confirmed\":\"last\"}).reset_index())\n",
+    "covid_cases = covid_cases.rename(columns={\"confirmed\":\"covid_cases\"})\n",
+    "cities = cities.merge(covid_cases, left_on=[\"state_code\",\"name\",\"year\"],\n",
+    "                          right_on=[\"state\",\"city\",\"year\"], how=\"left\")\n",
+    "cities.loc[cities[\"covid_cases\"].isnull(), \"covid_cases\"] = 0\n",
+    "\n",
+    "## MERGE WITH REGION INFO\n",
     "\n",
     "ibge = pd.read_excel(\"data/regioes_ibge.xls\")\n",
     "ibge[\"state\"] = ibge[\"CD_GEOCODI\"].astype(\"str\").str.slice(0, 2)\n",
@@ -280,14 +272,14 @@
     "ibge = ibge.rename(columns={\"nome_mun\":\"name\",\n",
     "                            \"nome_rgi\":\"region_name\",\n",
     "                            \"cod_rgi\":\"region_code\"})\n",
-    "cities = cities.merge(ibge, left_on=[\"state\",\"name\"],\n",
-    "                    right_on=[\"state\",\"name\"],\n",
-    "                    how=\"inner\")"
+    "cities = cities.merge(ibge, on=[\"state\",\"name\"],\n",
+    "                        how=\"inner\")\n",
+    "cities.to_csv(\"data/cities.csv\", mode=\"w\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "69a13141-6daa-47ab-a79c-0d9e783c9064",
    "metadata": {},
    "outputs": [],
@@ -296,12 +288,12 @@
     "import numpy as np\n",
     "regions = (cities.set_index([\"region_code\",\"region_name\",\"year\"])\n",
     "        .groupby([\"region_code\",\"region_name\",\"year\"])\n",
-    "        .agg(\n",
-    "            {\"hiv_total\":\"sum\",\n",
-    "              \"hiv_homo\":\"sum\",\n",
+    "        .agg({\"hiv_total\":\"sum\",\n",
+    "              \"hiv_h\":\"sum\",\n",
     "              \"hiv_het\":\"sum\",\n",
     "              \"hiv_bi\":\"sum\",\n",
     "              \"hiv_f\":\"sum\",\n",
+    "              \"hiv_m\":\"sum\",\n",
     "              \"hep_b_total\":\"sum\",\n",
     "              \"hep_b_m\":\"sum\",\n",
     "              \"hep_b_f\":\"sum\",\n",
@@ -312,13 +304,29 @@
     "             })\n",
     "        .reset_index())\n",
     "\n",
-    "regions.loc[regions[\"hiv_homo\"] == 0, \"pct_new_users\"] = 0\n",
-    "regions.loc[regions[\"hiv_homo\"] != 0, \"pct_new_users\"] = regions[\"new_users\"]/regions[\"hiv_homo\"]\n",
+    "regions.loc[regions[\"hiv_h\"] == 0, \"pct_new_users\"] = 0\n",
+    "regions.loc[regions[\"hiv_h\"] != 0, \"pct_new_users\"] = regions[\"new_users\"]/regions[\"hiv_h\"]\n",
     "regions.loc[regions[\"new_users\"] < 0, \"pct_new_users\"] = 0\n",
     "\n",
-    "regions.loc[regions[\"hiv_homo\"] == 0, \"pct_following\"] = 0\n",
-    "regions.loc[regions[\"hiv_homo\"] != 0, \"pct_following\"] = regions[\"following\"]/regions[\"hiv_homo\"]\n",
+    "regions.loc[regions[\"hiv_h\"] == 0, \"pct_following\"] = 0\n",
+    "regions.loc[regions[\"hiv_h\"] != 0, \"pct_following\"] = regions[\"following\"]/regions[\"hiv_h\"]\n",
     "\n",
+    "regions = regions.set_index(\"region_code\")\n",
+    "\n",
+    "def average_by_region(var):\n",
+    "    return (cities.query(f\"{var}.notna()\").groupby([\"region_code\",\"year\"])\n",
+    "            .apply(lambda x: np.average(x[var], weights=x.population))\n",
+    "    .reset_index().rename(columns={0:var} ))\n",
+    "\n",
+    "control_vars = [\"health_expend\",\"cash_transfer_expend\",\"gdpp\",\"pop20_24\",\"covid_cases\"]\n",
+    "\n",
+    "for var in control_vars:\n",
+    "    ## compute the average of the outcome by region\n",
+    "    ## ieps has no data for 2022\n",
+    "    var_df = average_by_region(var)\n",
+    "    regions = regions.merge(var_df, on=[\"region_code\",\"year\"],how=\"left\")\n",
+    "    \n",
+    "regions[\"state_code\"] = regions[\"region_code\"].astype(str).str.slice(0,2)\n",
     "regions.to_csv(\"data/regions.csv\", mode=\"w\", index=False)"
    ]
   }
